messaging_app/messaging_app/deployment.yaml
# This is for deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
        - name: messaging-app
          image: simangathinkdev/django-messaging-app:latest
          ports:
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  type: NodePort
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30200
